fix: hide scrollbar when not necessary

--- a/content/css/custom.css
+++ b/content/css/custom.css
@@ -7,10 +7,11 @@
 }
 
 .no-color {
-   --color: var(--color) !important;
+    --color: var(--color) !important;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -21,7 +22,7 @@ body {
 }
 
 main.container {
-    overflow: scroll;
+    overflow-y: auto;
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -51,7 +52,7 @@ nav > .title {
 }
 
 header > nav {
-    padding: 1rem 0 1rem 0;    
+    padding: 1rem 0 1rem 0;
 }
 
 nav > .links {
